logs/p2pem.log
Listing '.'...
Listing './bin'...
Compiling './bin/launch_director.py'...
***   File "./bin/launch_director.py", line 29
    print args
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/launch_manager.py'...
***   File "./bin/launch_manager.py", line 58
    except Exception, msg:
                    ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/P2PEM'...
Listing './lib/python3.5/site-packages/P2PEM/director'...
Compiling './lib/python3.5/site-packages/P2PEM/director/director.py'...
***   File "./lib/python3.5/site-packages/P2PEM/director/director.py", line 148
    print args
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/P2PEM/manager'...
Listing './lib/python3.5/site-packages/P2PEM/manager/fixsrcip-0.1'...
Listing './lib/python3.5/site-packages/P2PEM/manager/force_bind-0.4'...
Compiling './lib/python3.5/site-packages/P2PEM/manager/manager.py'...
***   File "./lib/python3.5/site-packages/P2PEM/manager/manager.py", line 277
    self.man_logger.info("Kill peer soft - killed peer: pid=" + str(process['process'].pid) + " id=" + `id`)
                                                                                                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/P2PEM/manager/shaping.py'...
***   File "./lib/python3.5/site-packages/P2PEM/manager/shaping.py", line 205
    self.logger.info("Scenario pre - added hosts to " + shape_etchosts.etc_hosts + ": ip_addrs="+ `ip_addrs`)
                                                                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/P2PEM/manager/traffic_stats.py'...
***   File "./lib/python3.5/site-packages/P2PEM/manager/traffic_stats.py", line 27
    file_str.write("%s,%s," % (`key`, ip))
                               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/P2PEM/scripts'...
Compiling './lib/python3.5/site-packages/P2PEM/scripts/launch_director.py'...
***   File "./lib/python3.5/site-packages/P2PEM/scripts/launch_director.py", line 29
    print args
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/P2PEM/scripts/launch_manager.py'...
***   File "./lib/python3.5/site-packages/P2PEM/scripts/launch_manager.py", line 58
    except Exception, msg:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/P2PEM-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
